# K2_Controller

./: .gitignore  CMakeLists.txt  make.sh  readme.md  run.sh
config/: can_device_config.h  global_config.h
include/core/: control_center.h  device_manager.h  logger.h
include/devices/: can_device.h  rs232_device.h
include/protocols/: can_interface.h  device_interface.h  device_protocol.h
include/utils/: device_util.h
src/: main.cpp
src/core/: control_center.cpp  device_manager.cpp  logger.cpp
src/devices/: can_device.cpp  rs232_device.cpp
src/protocols/: can_interface.cpp
src/utils/: device_util.cpp
tests/can/: CANInterface.cpp  CANInterface.h  CMakeLists.txt  MotorController.cpp  can_diagnostic.cpp  main.cpp
tests/new_crawler/: CANInterface.cpp  CANInterface.h  CMakeLists.txt  LH08Controller.cpp  LH08Controller.h  MotorController.cpp  MotorController.h  RS232Interface.cpp  RS232Interface.h  main.cpp
